Add postal code

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   </div>
                   <div class="row mt-3">
                     <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-                    <div class="col-sm-8">Kp. Cibeureum Kec. Cisarua Kab. Bogor Jawa Barat</div>
+                    <div class="col-sm-8">Kp. Cibeureum Kec. Cisarua Kab. Bogor Jawa Barat 16750</div>
                   </div>
                   <div class="row mt-3">
                     <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
@@ -316,7 +316,7 @@
                         <div class="col-md-6">
                           <div class="card-body">
                             <p class="mb-0"><strong>Address </strong></p>
-                            <p class="pb-2">Kp. Cibeureum Kec. Cisarua Kab. Bogor Jawa Barat</p>
+                            <p class="pb-2">Kp. Cibeureum Kec. Cisarua Kab. Bogor Jawa Barat 16750</p>
                             <p class="mb-0"><strong>Phone</strong></p>
                             <p class="pb-2">0838-1169-1729 / 0851-5633-0879</p>
                             <p class="mb-0"><strong>Email</strong></p>
