--- a/index.html
+++ b/index.html
@@ -170,6 +170,22 @@
                   </div>
                 </div>
               </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="progress-container progress-primary"><span class="progress-badge">Express JS</span>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></div><span class="progress-value">55%</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="progress-container progress-primary"><span class="progress-badge">React JS</span>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -181,7 +197,11 @@
               <div class="h4 text-center mb-4 title">Portfolio</div>
               <div class="nav-align-center">
                 <ul class="nav nav-pills nav-pills-primary" role="tablist">
-                  <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
+                  <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist">
+                      <i class="fa fa-laptop" aria-hidden="true"></i>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -191,36 +211,76 @@
               <div class="ml-auto mr-auto">
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="http://kalkulator-a.herokuapp.com/">
-                        <figure class="cc-effect"><img src="images/simple-calculator.png" alt="Image"/>
+                    <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                      <a href="https://kalkulator-a.herokuapp.com/">
+                        <figure class="cc-effect">
+                          <img src="images/simple-calculator.png" alt="Image"/>
                           <figcaption>
                             <div class="h4">Simple Calculator</div>
                             <p>HTML, CSS, PHP</p>
                           </figcaption>
-                        </figure></a></div>
-                    <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://imt-counter.herokuapp.com/">
-                        <figure class="cc-effect"><img src="images/imt-counter.png" alt="Image"/>
+                        </figure>
+                      </a>
+                    </div>
+                    <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                      <a href="https://imt-counter.herokuapp.com/">
+                        <figure class="cc-effect">
+                          <img src="images/imt-counter.png" alt="Image"/>
                           <figcaption>
                             <div class="h4">IMT Counter</div>
                             <p>HTML, CSS, PHP</p>
                           </figcaption>
-                        </figure></a></div>
+                        </figure>
+                      </a>
+                    </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://kalkulator-diskon.herokuapp.com/">
-                        <figure class="cc-effect"><img src="images/calculator-discount.png" alt="Image"/>
+                    <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                      <a href="https://kalkulator-diskon.herokuapp.com/">
+                        <figure class="cc-effect">
+                          <img src="images/calculator-discount.png" alt="Image"/>
                           <figcaption>
                             <div class="h4">Calculator Discount</div>
                             <p>HTML, PHP, Bootstrap</p>
                           </figcaption>
-                        </figure></a></div>
-                    <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#">
-                        <figure class="cc-effect"><img src="images/application-cashier.png" alt="Image"/>
+                        </figure>
+                      </a>
+                    </div>
+                    <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                      <a href="#">
+                        <figure class="cc-effect">
+                          <img src="images/application-cashier.png" alt="Image"/>
                           <figcaption>
                             <div class="h4">Application Cashier Resto</div>
                             <p>HTML, Laravel, Bootstrap</p>
                           </figcaption>
-                        </figure></a></div>
+                        </figure>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                      <a href="#">
+                        <figure class="cc-effect">
+                          <img src="images/nara-store.png" alt="Image"/>
+                          <figcaption>
+                            <div class="h4">Digital Product And Grocery</div>
+                            <p>ReactJS, ExpressJS, Bootstrap</p>
+                          </figcaption>
+                        </figure>
+                      </a>
+                    </div>
+                    <!-- <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                      <a href="#">
+                        <figure class="cc-effect">
+                          <img src="images/application-cashier.png" alt="Image"/>
+                          <figcaption>
+                            <div class="h4">Application Cashier Resto</div>
+                            <p>HTML, Laravel, Bootstrap</p>
+                          </figcaption>
+                        </figure>
+                      </a>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -231,24 +291,24 @@
       <div class="section" id="experience">
         <div class="container cc-experience">
           <div class="h4 text-center mb-4 title">Work Experience</div>
-          <h2 align="center">-</h2>
-          <!-- <div class="card">
+          <!-- <h2 align="center">-</h2> -->
+          <div class="card">
             <div class="row">
               <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                 <div class="card-body cc-experience-header">
-                  <p>March 2016 - Present</p>
-                  <div class="h5">CreativeM</div>
+                  <p>July 2022 - December 2022</p>
+                  <div class="h5">PT Septagon Telematika Indonesia</div>
                 </div>
               </div>
               <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                 <div class="card-body">
-                  <div class="h5">Front End Developer</div>
-                  <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+                  <div class="h5">Intern Student as Back End Developer</div>
+                  <p>Saya berpengalaman magang di PT Septagon Telematika Indonesia selama 6 bulan. Di sana, Saya menggunakan ExpressJS(BackEnd) dan ReactJS(FrontEnd).</p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="card">
+          <!-- <div class="card">
             <div class="row">
               <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                 <div class="card-body cc-experience-header">
