--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                 </div>
                 <div class="h2 title">Mohamad Asep Saepulloh</div>
                 <p class="category text-white">Vocational High School Student at SMK Wikrama Bogor</p>
-                <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
+                <!-- <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a> -->
+                <a class="btn btn-primary smooth-scroll mr-2" href="https://wa.me/6283811691729" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
                 <!-- <a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a> -->
               </div>
             </div>
